--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "postcss-px-to-viewport": "^1.1.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -23,7 +22,9 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
+    "postcss-px-to-viewport": "^1.1.0",
     "sass-loader": "^7.0.1",
+    "style-resources-loader": "^1.2.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
