--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.5.21",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
